[package]
name = "bevy-visual-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"  # Verifica l'ultima versione
bevy_egui = "0.23"  # Verifica l'ultima versione
serde = { version = "1.0", features = ["derive"] }